kubernetes/media/lidarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: lidarr
spec:
  ports:
    - port: 8686
      protocol: TCP
      targetPort: http
  selector:
    app: lidarr
  sessionAffinity: ClientIP
  type: ClusterIP
