kubernetes/media/lidarr/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr
  namespace: lidarr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`lidarr.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: lidarr
          port: 8686
  tls:
    secretName: lidarr-certificate
